# Breda-Charlton-FixationGrower

./: .gitignore  README.md  environment.yml  helpful.md  pyproject.toml
.cursor/rules/: notebooks.mdc
data/: days_df.parquet
data/figS2_simulations/: simulation_results_seed_0.parquet  simulation_results_seed_1.parquet  simulation_results_seed_10.parquet  simulation_results_seed_11.parquet  simulation_results_seed_12.parquet  simulation_results_seed_13.parquet  simulation_results_seed_14.parquet  simulation_results_seed_15.parquet  simulation_results_seed_16.parquet  simulation_results_seed_17.parquet  simulation_results_seed_18.parquet  simulation_results_seed_19.parquet  simulation_results_seed_2.parquet  simulation_results_seed_20.parquet  simulation_results_seed_21.parquet  simulation_results_seed_22.parquet  simulation_results_seed_23.parquet  simulation_results_seed_24.parquet  simulation_results_seed_25.parquet  simulation_results_seed_26.parquet  simulation_results_seed_27.parquet  simulation_results_seed_28.parquet  simulation_results_seed_29.parquet  simulation_results_seed_3.parquet  simulation_results_seed_30.parquet  simulation_results_seed_4.parquet  simulation_results_seed_5.parquet  simulation_results_seed_6.parquet  simulation_results_seed_7.parquet  simulation_results_seed_8.parquet  simulation_results_seed_9.parquet
notebooks/: fig01.ipynb  fig02.ipynb  fig03.ipynb  fig04.ipynb  suppS1.ipynb  suppS2.ipynb  suppS3.ipynb
src/fixation_grower/: config.py  io.py  paths.py  plotting.py  simulation.py  stats.py  transforms.py
