[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fixation-grower"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter", "ipywidgets"]

[tool.setuptools.packages.find]
where = ["src"]
